# Finalysis

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/: AAPL_financials.csv  AAPL_structured.csv  Final_Dataset_v2.csv  IBM_financials.csv  IBM_structured.csv  TGT_sentiment_data.json
src/: app.py  ingestion.py  model_v1.py  sentiment.py  test.py
src/templates/: dashboard.html  index.html
