[project]
name = "finalysis"
version = "0.1.0"
description = ""
authors = [
    {name = "yohaankhan",email = "yohaankhan11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "shap (>=0.48.0,<0.49.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
